fixed alignment on store items

--- a/dev/css/partials/_classes.scss
+++ b/dev/css/partials/_classes.scss
@@ -128,8 +128,10 @@
 }
 
 .item-row {
-	height: 25px;
-	//display: flex;
+	//height: 25px;
+	display: flex;
+	align-items: baseline;
+
 	&>* {
 		height: 100%;
 		margin: 1rem 0 0 0;
